로그인 컴포넌트 추가 및 ui 구현

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#9147ff",
-    "titleBar.inactiveBackground": "#9147ff"
+    "titleBar.activeBackground": "#383838",
+    "titleBar.inactiveBackground": "#383838"
   }
 }
